--- a/templates/modules/server/mongo.hbs
+++ b/templates/modules/server/mongo.hbs
@@ -1,4 +1,4 @@
-import { BulkWriteOperation, Collection, Db } from "mongodb";
+import { Collection, Db } from "mongodb";
 import { {{ pascalCase model }}Repo } from "../{{ pascalCase model }}Repo";
 import { {{ constantCase model }}_REPO_KEY } from "../{{ pascalCase model }}Repo";
 import { {{ pascalCase model }}, {{ pascalCase model }}Error, {{ pascalCase model }}Input } from "@deboxsoft/{{ kebabCase moduleName }}-api";
