--- a/templates/modules/server/repo.hbs
+++ b/templates/modules/server/repo.hbs
@@ -1,4 +1,4 @@
-import { {{ pascalCase model }}, {{ pascalCase model }}Filter, {{ pascalCase model }}Input } from "@deboxsoft/{{ kebabCase module }}-api";
+import { {{ pascalCase model }}, {{ pascalCase model }}Filter, {{ pascalCase model }}Input } from "@deboxsoft/{{ kebabCase moduleName }}-api";
 import { Container } from "@deboxsoft/module-core";
 import { ModifiedResult } from "@deboxsoft/module-server";
 
