--- a/templates/modules/server/index-service.hbs
+++ b/templates/modules/server/index-service.hbs
@@ -1,11 +1,11 @@
 import { {{ pascalCase moduleName }}ModuleOptions } from "../types";
 
 /* -- APPEND -- */
-import { create{{ pascalCase model }}ServiceServer } from "./{{ pascalCase model }}ServiceServer";
+import { create{{ pascalCase model }}ServiceServer } from "./{{ pascalCase model }}Service";
 
 export const register{{ pascalCase moduleName }}Module = async (options: {{ pascalCase moduleName }}ModuleOptions) => {
   /* -- APPEND-REGISTER -- */
-  create{{ pascalCase model}}Server(options);
+  create{{ pascalCase model}}ServiceServer(options);
 };
 
 /* -- APPEND-EXPORT -- */
