--- a/templates/modules/api/service.hbs
+++ b/templates/modules/api/service.hbs
@@ -1,5 +1,6 @@
 import { PageCursorResult } from "@deboxsoft/module-core";
 import {
+  {{ pascalCase model }},
   {{ pascalCase model }}Filter,
   {{ pascalCase model }}Input,
   {{ pascalCase model }}Params
