--- a/templates/modules/server/index-service.hbs
+++ b/templates/modules/server/index-service.hbs
@@ -9,4 +9,4 @@ export const register{{ pascalCase moduleName }}Module = async (options: {{ pasc
 };
 
 /* -- APPEND-EXPORT -- */
-export { get{{ pascalCase model }}ServiceServer, {{ pascalCase model }}ServiceServer, create{{ pascalCase model }}ServiceServer } from "./{{ pascalCase model }}ServiceServer";
+export { get{{ pascalCase model }}ServiceServer, {{ pascalCase model }}ServiceServer, create{{ pascalCase model }}ServiceServer } from "./{{ pascalCase model }}Service";
