--- a/templates/modules/api/model.hbs
+++ b/templates/modules/api/model.hbs
@@ -1,4 +1,5 @@
 import { z } from "@deboxsoft/zod";
+import { CollectionParams } from "@deboxsoft/module-core";
 
 export const {{ pascalCase model }}Event = {
   created: "{{ model }}Created",
@@ -15,6 +16,8 @@ export type {{ pascalCase model }} = {{ pascalCase model }}Input & {
 
 export type {{ pascalCase model }}Filter = {
 };
+
+export type {{ pascalCase model }}Params = CollectionParams<{{ pascalCase model }}Filter>;
 
 export const {{ pascalCase model }}InputSchema = z.object({
 });
