--- a/templates/modules/client/graphql-document.hbs
+++ b/templates/modules/client/graphql-document.hbs
@@ -47,7 +47,7 @@ export const Find{{ pascalCase  model }}Query = gql`
 `;
 
 export const Find{{ pascalCase  model }}PageQuery = gql`
-  query find {
+  query findPage {
     find{{ pascalCase  model }}Page {
       ...{{ pascalCase  model }}PageResultFragment
     }
