--- a/templates/modules/api/model.hbs
+++ b/templates/modules/api/model.hbs
@@ -1,24 +1,25 @@
 import { z } from "@deboxsoft/zod";
 import { CollectionParams } from "@deboxsoft/module-core";
 
+//*********************************** Event **********************************
 export const {{ pascalCase model }}Event = {
   created: "{{ pascalCase model }}Created",
   updated: "{{ pascalCase model }}Updated",
   removed: "{{ pascalCase model }}Removed"
 };
 
-export const {{ pascalCase model }}InputSchema = z.object({
+//*********************************** Schema **********************************
+export const {{ pascalCase model }}Schema = z.object({
 });
+export const {{ pascalCase model }}CreateSchema = {{ pascalCase model }}Schema.omit({ id: true });
+export const {{ pasclaCase model }}UpdateSchema = {{ pascalCase model }}CreateSchema.partial();
 
-export type {{ pascalCase model }}Input = z.infer<typeof {{ pascalCase model }}InputSchema> & {
-};
-export type {{ pascalCase model }}UpdateInput = Partial<{{ pascalCase model }}Input>;
-
-export type {{ pascalCase model }} = {{ pascalCase model }}Input & {
-  id: string;
-};
-
+//*********************************** Type **********************************
+export type {{ pascalCase model }} = z.infer<typeof {{ pascalCase model }}Schema>;
+export type {{ pascalCase model }}CreateInput = z.infer<typeof {{ pascalCase model }}CreateSchema>;
+export type {{ pascalCase model }}CreateDataInput = {{ pascalCase model }}CreateInput;
+export type {{ pascalCase model }}UpdateInput = z.infer<typeof {{ pascalCase model }}UpdateSchema>;
+export type {{ pascalCase model }}UpdateDataInput = {{ pascalCase model }}UpdateInput;
 export type {{ pascalCase model }}Filter = {
 };
-
 export type {{ pascalCase model }}Params = CollectionParams<{{ pascalCase model }}Filter>;
