--- a/templates/modules/server/index.hbs
+++ b/templates/modules/server/index.hbs
@@ -2,18 +2,21 @@
 import {
   /* GEN-ADD: import-services */
   create{{ pascalCase model }}ServiceServer
+  /* GEN-END: import-services */
 } from "./services/index.js";
 
 // prettier-ignore
 import {
   /* GEN-ADD: import-mongo */
   create{{ pascalCase model }}Repo
+  /* GEN-END: import-mongo */
 } from "./db/mongo/index.js";
 
 // prettier-ignore
 import {
   /* GEN-ADD: import-fastify */
   create{{ pascalCase model }}Route
+  /* GEN-END: import-fastify */
 } from "./fastify/index.js";
 
 import { FastifyInstance } from "fastify";
@@ -23,14 +26,17 @@ import { {{ pascalCase projectName }}ServerModuleConfig } from "./types.js";
 export const create{{ pascalCase projectName }}ServiceServer = async (config: {{ pascalCase projectName }}ServerModuleConfig) => {
   /* GEN-ADD: create-service */
   await create{{ pascalCase model }}ServiceServer(config);
+  /* GEN-END: create-service */
 };
 
 export const create{{ pascalCase projectName }}MongoRepo = () => {
   /* GEN-ADD: create-mongo */
   create{{ pascalCase model }}Repo();
+  /* GEN-END: create-mongo */
 };
 
-export const create{{ pascalCase projectName }}FastifyRoute = async (instance: FastifyInstance<any>, opts: GftServerApiOptions) => {
+export const create{{ pascalCase projectName }}FastifyRoute = async (instance: FastifyInstance<any>, opts: {{ pascalCase projectName }}ServerApiOptions) => {
   /* GEN-ADD: create-fastify */
   create{{ pascalCase model }}Route(instance, opts);
+  /* GEN-END: create-fastify */
 };
