--- a/templates/modules/server/mongo-collection.hbs
+++ b/templates/modules/server/mongo-collection.hbs
@@ -1,6 +1,6 @@
 import { Db, ObjectId, TransactionOptions } from "mongodb";
 import { {{ pascalCase model }}Repo, {{ constantCase model }}_REPO_KEY } from "../index.js";
-import { {{ pascalCase model }}Data, {{ pascalCase model }}DataInput, {{ pascalCase model }}Error, {{ pascalCase model }}Filter } from "@deboxsoft/{{ kebabCase model }}-api";
+import { {{ pascalCase model }}Data, {{ pascalCase model }}DataInput, {{ pascalCase model }}Error, {{ pascalCase model }}Filter } from "@deboxsoft/{{ kebabCase projectName }}-api";
 
 import { Container, getLogger, Logger } from "@deboxsoft/module-core";
 import { BaseRepository, getMongoDb } from "@deboxsoft/module-mongo";
